refactored possible cases and modified buttons and text upon answer

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,13 @@
   <title>Influencer Hand Raise</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+  	<style id="style" type="text/css">
+  		.hideIt {
+  			color:red;
+  		}
+  	</style>
+  </div>
   <script src="bundle.js"></script>
 </body>
 </html>
